shows overlapped matches, changed print style and removed some bugs.

--- a/css/dn.a.nalyzer.css
+++ b/css/dn.a.nalyzer.css
@@ -25,8 +25,12 @@ body {
 }
 textarea {
 	min-height: 300px;
-	min-width: 765px;
-	max-width: 765px;
+	min-width: 920px;
+	max-width: 920px;
+}
+h3 {
+	padding-top: 4px;
+	padding-bottom: 4px;
 }
 li {
 	padding: 5px;
@@ -60,10 +64,15 @@ textarea.text {
     font-family: Courier;
 }
 div.tab {
-    width: 840px;
+    width: 980px;
 }
 span.selection {
     font-weight: bold;
     background: #2779AA;
+    color: white;
+}
+span.selectionOverlapped {
+    font-weight: bold;
+    background: #AA00AA;
     color: white;
 }
